Release v1.1.0: afterToolCall, binary HTTP responses, todo PDF demo, core 1.1.0
